charts/tasmoadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasmoadmin
spec:
  type: ExternalName
  externalName: homeassistant.dhcp.home
  ports:
    - port: 9541
      protocol: TCP
      targetPort: 9541
