charts/tasmoadmin/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasmoadmin-tunnel
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/controller: tasmoadmin-tunnel
      app.kubernetes.io/instance: tasmoadmin-tunnel
      app.kubernetes.io/name: tasmoadmin-tunnel
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: tasmoadmin-tunnel
        app.kubernetes.io/instance: tasmoadmin-tunnel
        app.kubernetes.io/name: tasmoadmin-tunnel
    spec:
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      containers:
        - name: tasmoadmin-tunnel
          image: alpine/socat
          args:
          - tcp-listen:9541,fork,reuseaddr
          - tcp-connect:homeassistant.dhcp.home:9541
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tasmoadmin-tunnel
spec:
  hostnames:
    - tasmoadmin.g4v.dev
  parentRefs:
    - name: http-gateway
      namespace: envoy-gateway
      sectionName: https
  rules:
  - backendRefs:
    - name: tasmoadmin-tunnel
      port: 9541
    matches:
    - path:
        type: PathPrefix
        value: /
---
apiVersion: v1
kind: Service
metadata:
  name: tasmoadmin-tunnel
spec:
  selector:
    app.kubernetes.io/controller: tasmoadmin-tunnel
    app.kubernetes.io/instance: tasmoadmin-tunnel
    app.kubernetes.io/name: tasmoadmin-tunnel
  ports:
  - port: 9541
    protocol: TCP
    targetPort: 9541
