charts/tasmoadmin/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tasmoadmin
spec:
  hostnames:
  - tasmoadmin.g4v.dev
  parentRefs:
  - name: internal
    namespace: envoy-gateway-system
  rules:
  - backendRefs:
    - name: tasmoadmin
      port: 9541
    matches:
    - path:
        type: PathPrefix
        value: /
