charts/tasmoadmin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tasmoadmin
spec:
  rules:
  - host: tasmoadmin.g4v.dev
    http:
      paths:
      - backend:
          service:
            name: tasmoadmin
            port:
              number: 9541
        path: /
        pathType: ImplementationSpecific
